--- a/index.html
+++ b/index.html
@@ -4,12 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
     />
   </head>
   <body>
+    <header class="navbar navbar-expand-lg sticky-top">
+      <div class="container">
+        <h1 class="navbar-brand">Belle Restaurante</h1>
+        <nav>
+          <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a href="#" class="nav-link active">Sobre o Belle</a>
+            </li>
+            <li class="nav-item"><a href="#" class="nav-link">Eventos</a></li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Nosso cardápio</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Fale conosco</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
