--- a/index.html
+++ b/index.html
@@ -10,27 +10,45 @@
       href="https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="main.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <header class="navbar navbar-expand-lg sticky-top">
+    <header class="navbar navbar-expand-lg sticky-top p-4">
       <div class="container">
         <h1 class="navbar-brand">Belle Restaurante</h1>
         <nav>
           <ul class="nav nav-pills">
-            <li class="nav-item">
-              <a href="#" class="nav-link active">Sobre o Belle</a>
+            <li class="nav-item fw-bold">
+              <a href="#" class="nav-link active">
+                <i class="bi bi-house-door me-1"></i>
+                Sobre o Belle</a
+              >
             </li>
-            <li class="nav-item"><a href="#" class="nav-link">Eventos</a></li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Nosso cardápio</a>
+            <li class="nav-item fw-bold">
+              <a href="#" class="nav-link">
+                <i class="bi bi-calendar-check me-1"></i>
+                Eventos</a
+              >
             </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Fale conosco</a>
+            <li class="nav-item fw-bold">
+              <a href="#" class="nav-link">
+                <i class="bi bi-card-text me-1"></i>
+                Nosso cardápio</a
+              >
+            </li>
+            <li class="nav-item fw-bold">
+              <a href="#" class="nav-link">
+                <i class="bi bi-chat-left-text me-1"></i>
+                Fale conosco</a
+              >
             </li>
           </ul>
         </nav>
