--- a/index.html
+++ b/index.html
@@ -23,9 +23,19 @@
   <body>
     <header class="navbar navbar-expand-lg sticky-top p-4">
       <div class="container">
-        <h1 class="navbar-brand">Belle Restaurante</h1>
-        <nav>
-          <ul class="nav nav-pills">
+        <h1 class="navbar-brand m-0">Belle Restaurante</h1>
+        <button
+          class="navbar-toggler"
+          data-bs-toggle="collapse"
+          data-bs-target="#menu__navegacao"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <nav
+          class="navbar-collapse collapse justify-content-end"
+          id="menu__navegacao"
+        >
+          <ul class="nav nav-pills d-block d-md-flex">
             <li class="nav-item fw-bold">
               <a href="#" class="nav-link active">
                 <i class="bi bi-house-door me-1"></i>
@@ -54,7 +64,6 @@
         </nav>
       </div>
     </header>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
