--- a/index.html
+++ b/index.html
@@ -64,6 +64,65 @@
         </nav>
       </div>
     </header>
+    <section class="" id="sobre__o__restaurante">
+      <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-bs-interaval="1000">
+            <img
+              src="images/slides/slide1.png"
+              alt="Espaço interno do restaurante"
+            />
+          </div>
+          <div class="carousel-item" data-bs-interaval="1000">
+            <img
+              src="images/slides/slide2.png"
+              alt="Garrafa e duas taças de vinho"
+            />
+          </div>
+          <div class="carousel-item" data-bs-interaval="1000">
+            <img
+              src="images/slides/slide3.png"
+              alt="Mesa com comidas variadas"
+            />
+          </div>
+        </div>
+        <button
+          type="button"
+          class="carousel-control-prev"
+          data-bs-target="#carousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button
+          type="button"
+          class="carousel-control-next"
+          data-bs-target="#carousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon"></span>
+        </button>
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carousel"
+            data-bs-slide-to="0"
+            class="active"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carousel"
+            data-bs-slide-to="1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carousel"
+            data-bs-slide-to="2"
+          ></button>
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
