section sobre o restaurante

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <header class="navbar navbar-expand-lg sticky-top p-4">
       <div class="container">
-        <h1 class="navbar-brand m-0">Belle Restaurante</h1>
+        <h1 class="navbar-brand m-0 section-title">Belle Restaurante</h1>
         <button
           class="navbar-toggler"
           data-bs-toggle="collapse"
@@ -119,6 +119,40 @@
             data-bs-target="#carousel"
             data-bs-slide-to="2"
           ></button>
+        </div>
+      </div>
+      <div class="pt-5 pb-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-5">
+              <img
+                src="images/restaurante.jpg"
+                class="d-block w-100 rounded"
+                alt="Foto do espaço interno do restaurante"
+              />
+            </div>
+            <div class="col-md-7">
+              <h2 class="section-title">Sobre <span>o restaurante</span></h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Perspiciatis, vitae repudiandae, deleniti, reiciendis dolores
+                aliquid maiores ex ipsa vel ipsam magni amet necessitatibus
+                cumque eius repellat debitis consequuntur ducimus dolorem.
+              </p>
+              <h3 class="section-title">Sobre <span>o espaço</span></h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ad
+                laboriosam repudiandae totam autem voluptatibus quidem vel
+                laborum excepturi repellendus officiis repellat facere,
+                quibusdam dolorum cumque reprehenderit vero quod illo?
+              </p>
+              <ul>
+                <li>Item 1</li>
+                <li>Item 2</li>
+                <li>Item 3</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </section>
