--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <header class="navbar navbar-expand-lg sticky-top p-4">
+    <header class="navbar navbar-expand-lg sticky-top p-4" id="cabecalho">
       <div class="container">
         <h1 class="navbar-brand m-0 section-title">Belle Restaurante</h1>
         <button
@@ -37,7 +37,7 @@
         >
           <ul class="nav nav-pills d-block d-md-flex">
             <li class="nav-item fw-bold">
-              <a href="#" class="nav-link active">
+              <a href="#sobre__o__restaurante" class="nav-link">
                 <i class="bi bi-house-door me-1"></i>
                 Sobre o Belle</a
               >
@@ -64,99 +64,100 @@
         </nav>
       </div>
     </header>
-    <section class="" id="sobre__o__restaurante">
-      <div class="carousel slide" data-bs-ride="carousel" id="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interaval="1000">
-            <img
-              src="images/slides/slide1.png"
-              alt="Espaço interno do restaurante"
-            />
-          </div>
-          <div class="carousel-item" data-bs-interaval="1000">
-            <img
-              src="images/slides/slide2.png"
-              alt="Garrafa e duas taças de vinho"
-            />
-          </div>
-          <div class="carousel-item" data-bs-interaval="1000">
-            <img
-              src="images/slides/slide3.png"
-              alt="Mesa com comidas variadas"
-            />
-          </div>
-        </div>
-        <button
-          type="button"
-          class="carousel-control-prev"
-          data-bs-target="#carousel"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button
-          type="button"
-          class="carousel-control-next"
-          data-bs-target="#carousel"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon"></span>
-        </button>
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carousel"
-            data-bs-slide-to="0"
-            class="active"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carousel"
-            data-bs-slide-to="1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carousel"
-            data-bs-slide-to="2"
-          ></button>
-        </div>
-      </div>
-      <div class="pt-5 pb-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-5">
+    <div data-bs-spy="scroll" data-bs-target="cabecalho">
+      <section class="" id="sobre__o__restaurante">
+        <div class="carousel slide" data-bs-ride="carousel" id="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interaval="1000">
               <img
-                src="images/restaurante.jpg"
-                class="d-block w-100 rounded"
-                alt="Foto do espaço interno do restaurante"
+                src="images/slides/slide1.png"
+                alt="Espaço interno do restaurante"
               />
             </div>
-            <div class="col-md-7">
-              <h2 class="section-title">Sobre <span>o restaurante</span></h2>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Perspiciatis, vitae repudiandae, deleniti, reiciendis dolores
-                aliquid maiores ex ipsa vel ipsam magni amet necessitatibus
-                cumque eius repellat debitis consequuntur ducimus dolorem.
-              </p>
-              <h3 class="section-title">Sobre <span>o espaço</span></h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ad
-                laboriosam repudiandae totam autem voluptatibus quidem vel
-                laborum excepturi repellendus officiis repellat facere,
-                quibusdam dolorum cumque reprehenderit vero quod illo?
-              </p>
-              <ul>
-                <li>Item 1</li>
-                <li>Item 2</li>
-                <li>Item 3</li>
-              </ul>
+            <div class="carousel-item" data-bs-interaval="1000">
+              <img
+                src="images/slides/slide2.png"
+                alt="Garrafa e duas taças de vinho"
+              />
+            </div>
+            <div class="carousel-item" data-bs-interaval="1000">
+              <img
+                src="images/slides/slide3.png"
+                alt="Mesa com comidas variadas"
+              />
+            </div>
+          </div>
+          <button
+            type="button"
+            class="carousel-control-prev"
+            data-bs-target="#carousel"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button
+            type="button"
+            class="carousel-control-next"
+            data-bs-target="#carousel"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon"></span>
+          </button>
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carousel"
+              data-bs-slide-to="0"
+              class="active"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carousel"
+              data-bs-slide-to="1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carousel"
+              data-bs-slide-to="2"
+            ></button>
+          </div>
+        </div>
+        <div class="pt-5 pb-5">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-5">
+                <img
+                  src="images/restaurante.jpg"
+                  class="d-block w-100 rounded"
+                  alt="Foto do espaço interno do restaurante"
+                />
+              </div>
+              <div class="col-md-7">
+                <h2 class="section-title">Sobre <span>o restaurante</span></h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Perspiciatis, vitae repudiandae, deleniti, reiciendis dolores
+                  aliquid maiores ex ipsa vel ipsam magni amet necessitatibus
+                  cumque eius repellat debitis consequuntur ducimus dolorem.
+                </p>
+                <h3 class="section-title">Sobre <span>o espaço</span></h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
+                  ad laboriosam repudiandae totam autem voluptatibus quidem vel
+                  laborum excepturi repellendus officiis repellat facere,
+                  quibusdam dolorum cumque reprehenderit vero quod illo?
+                </p>
+                <ul>
+                  <li>Item 1</li>
+                  <li>Item 2</li>
+                  <li>Item 3</li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
-
+      </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
