feito section eventos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               >
             </li>
             <li class="nav-item fw-bold">
-              <a href="#" class="nav-link">
+              <a href="#eventos" class="nav-link">
                 <i class="bi bi-calendar-check me-1"></i>
                 Eventos</a
               >
@@ -133,14 +133,18 @@
                 />
               </div>
               <div class="col-md-7">
-                <h2 class="section-title">Sobre <span>o restaurante</span></h2>
+                <h2 class="section-title">
+                  Sobre <span class="text-colorful">o restaurante</span>
+                </h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                   Perspiciatis, vitae repudiandae, deleniti, reiciendis dolores
                   aliquid maiores ex ipsa vel ipsam magni amet necessitatibus
                   cumque eius repellat debitis consequuntur ducimus dolorem.
                 </p>
-                <h3 class="section-title">Sobre <span>o espaço</span></h3>
+                <h3 class="section-title">
+                  Sobre <span class="text-colorful">o espaço</span>
+                </h3>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt
                   ad laboriosam repudiandae totam autem voluptatibus quidem vel
@@ -153,6 +157,67 @@
                   <li>Item 3</li>
                 </ul>
               </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="eventos" class="pt-5 pb-5">
+        <div class="container">
+          <div class="row">
+            <h2 class="section-title text-center">
+              Para todas <span class="text-colorful">as ocasiões</span>
+            </h2>
+          </div>
+          <div class="row mt-4">
+            <div class="col-md-4">
+              <img
+                class="d-block w-100 rounded mb-2"
+                src="images/eventos/aniversario.jpg"
+                alt="Bolinhos com velas acesas em cima"
+              />
+              <h3 class="section-title text-colorful fs-4">
+                <i class="bi bi-calendar-heart-fill"></i> Aniversários
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Repellat iusto exercitationem excepturi distinctio veritatis
+                dolorum cum nobis. Odio omnis laboriosam totam ducimus provident
+                reprehenderit. Officiis vero modi asperiores temporibus aut?
+              </p>
+            </div>
+            <div class="col-md-4">
+              <img
+                class="d-block w-100 rounded mb-2"
+                src="images/eventos/casamento.jpg"
+                alt="Bolinhos com velas acesas em cima"
+              />
+              <h3 class="section-title text-colorful fs-4">
+                <i class="bi bi-arrow-through-heart-fill"></i>
+                Recepção para casamentos
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Repellat iusto exercitationem excepturi distinctio veritatis
+                dolorum cum nobis. Odio omnis laboriosam totam ducimus provident
+                reprehenderit. Officiis vero modi asperiores temporibus aut?
+              </p>
+            </div>
+            <div class="col-md-4">
+              <img
+                class="d-block w-100 rounded mb-2"
+                src="images/eventos/confraternizacoes.jpg"
+                alt="Bolinhos com velas acesas em cima"
+              />
+              <h3 class="section-title text-colorful fs-4">
+                <i class="bi bi-people-fill"></i>
+                Confraternizações
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Repellat iusto exercitationem excepturi distinctio veritatis
+                dolorum cum nobis. Odio omnis laboriosam totam ducimus provident
+                reprehenderit. Officiis vero modi asperiores temporibus aut?
+              </p>
             </div>
           </div>
         </div>
