feito section cardapio com menu aside

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               >
             </li>
             <li class="nav-item fw-bold">
-              <a href="#" class="nav-link">
+              <a href="#cardapio" class="nav-link">
                 <i class="bi bi-card-text me-1"></i>
                 Nosso cardápio</a
               >
@@ -65,7 +65,7 @@
       </div>
     </header>
     <div data-bs-spy="scroll" data-bs-target="cabecalho">
-      <section class="" id="sobre__o__restaurante">
+      <section id="sobre__o__restaurante">
         <div class="carousel slide" data-bs-ride="carousel" id="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interaval="1000">
@@ -218,6 +218,335 @@
                 dolorum cum nobis. Odio omnis laboriosam totam ducimus provident
                 reprehenderit. Officiis vero modi asperiores temporibus aut?
               </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="cardapio" class="pt-5 pb-5">
+        <div class="container">
+          <div class="row">
+            <h2 class="section-title text-center mb-5">
+              Nosso <span class="text-colored">cardápio</span>
+            </h2>
+          </div>
+          <div class="row">
+            <aside class="col-md-2">
+              <nav class="nav nav-pills flex-column nav-cardapio">
+                <button
+                  data-bs-toggle="tab"
+                  data-bs-target="#drinks__nao__alcoolicos"
+                  type="button"
+                  class="fw-bold text-start nav-link text-colorful active"
+                >
+                  Drinks não alcoólicos
+                </button>
+                <button
+                  data-bs-toggle="tab"
+                  data-bs-target="#drinks__alcoolicos"
+                  type="button"
+                  class="fw-bold text-start nav-link text-colorful"
+                >
+                  Drinks alcoólicos
+                </button>
+                <button
+                  data-bs-toggle="tab"
+                  data-bs-target="#entradas"
+                  type="button"
+                  class="fw-bold text-start nav-link text-colorful"
+                >
+                  Entradas
+                </button>
+                <button
+                  data-bs-toggle="tab"
+                  data-bs-target="#pratos__principais"
+                  type="button"
+                  class="fw-bold text-start nav-link text-colorful"
+                >
+                  Pratos principais
+                </button>
+                <button
+                  data-bs-toggle="tab"
+                  data-bs-target="#sobremesas"
+                  type="button"
+                  class="fw-bold text-start nav-link text-colorful"
+                >
+                  Sobremesas
+                </button>
+              </nav>
+            </aside>
+            <div class="col-md-10">
+              <div class="tab-content">
+                <div id="drinks__nao__alcoolicos" class="tab-pane active">
+                  <div class="row">
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/bebidas/coca-cola.jpg"
+                        alt="Coca-Cola"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Coca-Cola</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/bebidas/suco.jpg"
+                        alt="Suco"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">
+                        Suco de Laranja
+                      </h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/bebidas/suco.jpg"
+                        alt="Suco"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">
+                        Suco de Laranja
+                      </h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/bebidas/suco.jpg"
+                        alt="Suco"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">
+                        Suco de Laranja
+                      </h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/bebidas/suco.jpg"
+                        alt="Suco"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">
+                        Suco de Laranja
+                      </h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/bebidas/suco.jpg"
+                        alt="Suco"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">
+                        Suco de Laranja
+                      </h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div id="drinks__alcoolicos" class="tab-pane">
+                  <div class="row">
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/bebidas/cerveja.jpg"
+                        alt="Cerveja"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Cerveja</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/bebidas/vinho.jpg"
+                        alt="Vinho"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Vinho</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div id="entradas" class="tab-pane">
+                  <div class="row">
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/entradas/entrada.jpg"
+                        alt="prato de frios"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Frios</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/entradas/entrada.jpg"
+                        alt="frios"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Frios</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/entradas/entrada.jpg"
+                        alt="frios"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Frios</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/entradas/entrada.jpg"
+                        alt="frios"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Frios</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/entradas/entrada.jpg"
+                        alt="frios"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Frios</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div id="pratos__principais" class="tab-pane">
+                  <div class="row">
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/pratos/pizza.jpg"
+                        alt="Pizza"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Pizza</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/pratos/pizza.jpg"
+                        alt="pizza"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Pizza</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/pratos/salmao.jpg"
+                        alt="salmão"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Salmão</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/pratos/pizza.jpg"
+                        alt="pizza"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Pizza</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/pratos/salmao.jpg"
+                        alt="salmão"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Salmão</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div id="sobremesas" class="tab-pane">
+                  <div class="row">
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/sobremesas/bolo.jpg"
+                        alt="bolo"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">Bolo</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                    <div class="col-md-3">
+                      <img
+                        class="d-block w-100"
+                        src="images/cardapio/sobremesas/cupcake.jpg"
+                        alt="cupcake"
+                      />
+                      <h5 class="text-colorful fw-bold mt-2">cupcake</h5>
+                      <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
