fix: centralizado carousel, rastreamento da pagina `data-bs`

--- a/index.html
+++ b/index.html
@@ -64,10 +64,15 @@
         </nav>
       </div>
     </header>
-    <div data-bs-spy="scroll" data-bs-target="cabecalho">
-      <section id="sobre__o__restaurante">
+    <div
+      data-bs-spy="scroll"
+      data-bs-target="cabecalho"
+      data-bs-root-margin="0px 0px -40%"
+      data-bs-smooth-scroll="true"
+    >
+      <section id="sobre__o__restaurante" class="pb-5">
         <div class="carousel slide" data-bs-ride="carousel" id="carousel">
-          <div class="carousel-inner">
+          <div class="carousel-inner d-flex text-center">
             <div class="carousel-item active" data-bs-interaval="1000">
               <img
                 src="images/slides/slide1.png"
@@ -162,9 +167,9 @@
         </div>
       </section>
       <section id="eventos" class="pt-5 pb-5">
-        <div class="container">
+        <div class="container py-5">
           <div class="row">
-            <h2 class="section-title text-center">
+            <h2 class="section-title text-center pb-3">
               Para todas <span class="text-colorful">as ocasiões</span>
             </h2>
           </div>
