--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               >
             </li>
             <li class="nav-item fw-bold">
-              <a href="#" class="nav-link">
+              <a href="#fale__conosco" class="nav-link">
                 <i class="bi bi-chat-left-text me-1"></i>
                 Fale conosco</a
               >
@@ -551,6 +551,85 @@
                     </div>
                   </div>
                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="fale__conosco" class="py-5">
+        <div class="container">
+          <div class="row">
+            <h2 class="section-title text-center">
+              Fale <span class="text-colorful">Conosco</span>
+            </h2>
+          </div>
+          <div class="row">
+            <div class="col-md-7">
+              <form>
+                <div class="mb-3">
+                  <label for="nome" class="form-label fw-bold"
+                    >Seu <span class="text-colorful">nome</span></label
+                  >
+                  <input type="text" id="nome" class="form-control" required />
+                </div>
+                <div class="mb-3">
+                  <label for="email" class="form-label fw-bold"
+                    >Seu <span class="text-colorful">e-mail</span></label
+                  >
+                  <input
+                    type="email"
+                    id="email"
+                    class="form-control"
+                    required
+                  />
+                </div>
+                <div class="mb-3">
+                  <label for="telefone" class="form-label fw-bold"
+                    >Seu <span class="text-colorful">telefone</span></label
+                  >
+                  <input type="tel" id="telefone" class="form-control" />
+                </div>
+                <div class="mb-3">
+                  <label for="mensagem" class="form-label fw-bold"
+                    >Sua <span class="text-colorful">mensagem</span></label
+                  >
+                  <textarea
+                    id="mensagem"
+                    class="form-control"
+                    required
+                  ></textarea>
+                </div>
+                <button type="submit" class="btn fw-bold">Enviar</button>
+              </form>
+            </div>
+            <div class="col-md-5">
+              <div class="row">
+                <h3 class="section-title fs-4 text-colorful">
+                  <i class="bi bi-hand-thumbs-up-fill"></i>
+                  Redes sociais
+                </h3>
+                <ul class="social-links">
+                  <li class="fs-5">
+                    <a href="#"><i class="text-colorful bi bi-facebook"></i></a>
+                  </li>
+                  <li class="fs-5 mx-2">
+                    <a href="#"
+                      ><i class="text-colorful bi bi-instagram"></i
+                    ></a>
+                  </li>
+                  <li class="fs-5">
+                    <a href="#"><i class="text-colorful bi bi-whatsapp"></i></a>
+                  </li>
+                </ul>
+              </div>
+              <div class="row mt-4">
+                <h3 class="section-title fs-4 text-colorful">
+                  <i class="bi bi-cursor-fill"></i>
+                  Endereço
+                </h3>
+                <p>
+                  Rua Teste Exemplo, nº 123, Bairro Bootstrap - Boa Vista - RR
+                </p>
               </div>
             </div>
           </div>
