--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                   alt="Foto do espaço interno do restaurante"
                 />
               </div>
-              <div class="col-md-7">
+              <div class="col-md-7 mt-3 mt-md-0">
                 <h2 class="section-title">
                   Sobre <span class="text-colorful">o restaurante</span>
                 </h2>
@@ -564,7 +564,7 @@
             </h2>
           </div>
           <div class="row">
-            <div class="col-md-7">
+            <div class="col-md-7 mb-5">
               <form>
                 <div class="mb-3">
                   <label for="nome" class="form-label fw-bold"
@@ -636,6 +636,14 @@
         </div>
       </section>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- abaixo é o cdn para o jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- Abaixo é o plugin de máscara para o jQuery -->
+    <script src="js/jquery.mask.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        $("#telefone").mask("(00) 0 0000-0000");
+      });
+    </script>
   </body>
 </html>
