--- a/index.html
+++ b/index.html
@@ -636,6 +636,7 @@
         </div>
       </section>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- abaixo é o cdn para o jQuery -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <!-- Abaixo é o plugin de máscara para o jQuery -->
